manifests/apps/vikunja/network.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vikunja
  namespace: vikunja
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-home
    kubernetes.io/ingress.class: nginx                  # home, # Dankata, # Marina/Zhelezhnitsa
    nginx.ingress.kubernetes.io/whitelist-source-range: "10.8.0.0/24,92.247.208.224/32,87.243.107.94/32,151.237.55.238/32"
  labels:
    app: vikunja
    env: home
spec:
  tls:
  - hosts:
    - board.iaminyourpc.xyz
    secretName: tls-board-k8s-iaminyourpc-xyz
  rules:
  - host: board.k8s.iaminyourpc.xyz
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: vikunja
            port:
              number: 3456
